<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!--    music title-->
    <TextView
        android:id="@+id/title_music"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
<!--    music image-->
    <ImageView
        android:layout_gravity="center"
        android:id="@+id/image_music"
        android:layout_width="125dp"
        android:layout_height="125dp"/>
<!--    music price-->
    <TextView
        android:text="@string/price"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/price_music"
        android:textSize="15sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
<!--    band name-->
    <TextView
        android:text="@string/band_name"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/band_music"
        android:textSize="15sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
<!--    release date-->
    <TextView
        android:text="@string/release_date"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/date_music"
        android:textSize="15sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
<!--    button-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/buy"/>
    <Button
        android:id="@+id/buy_music"
        android:text="@string/buya"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>