<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginForm">
<!-- app tittle-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/tittle_APP"
        android:textAlignment="center"
        android:textSize="35sp"
        android:layout_gravity="center"
        >
    </TextView>
<!--    login welcome-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/login_to_app"
        android:textSize="35sp"
        android:layout_gravity="center"
        >
    </TextView>
<!--    main login linear layout-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="8"
        android:orientation="vertical">
<!--        user login linear layout-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="25sp"
                android:text="@string/login_email"/>
            <EditText
                android:id="@+id/login_user"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>
<!--        user password login linear layout-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:textSize="25sp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/login_password">
            </TextView>
            <EditText
                android:id="@+id/login_pass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>
    </LinearLayout>
<!--    main login and register button linear layout-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
<!--    login button-->
        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_button"/>
<!--     register button-->
        <TextView
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"/>
    </LinearLayout>

</LinearLayout>